# demo-red-panda

./: .gitignore  README.md
.devcontainer/: devcontainer.json
app/: Dockerfile  Dockerfile.dev  Makefile  consumer.py  docker-compose.yml  main.py  notebook.ipynb  producer.py  pyproject.toml  requirements.txt  streaming_worker.py
app/alembic/: env.py
app/alembic/versions/: f32c28b4bc0b_baseline.py
